Fix up skill spacing with mdx import

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -78,3 +78,7 @@ h4 {
         }
     }
   }
+
+  .skill:not(:last-child) {
+    margin-bottom: -0.75rem;
+  }
